[package]
name = "hcl-rs"
version = "0.12.1"
authors = ["Martin Ohmann <martinohmann@gmail.com>"]
license = "MIT"
description = "HCL parser and formatter for rust with serde support"
repository = "https://github.com/martinohmann/hcl-rs"
documentation = "https://docs.rs/hcl-rs/"
keywords = ["hcl", "serde", "serialization"]
categories = ["encoding"]
readme = "README.md"
edition = "2021"
exclude = [
    ".github/",
]

[lib]
name = "hcl"
path = "src/lib.rs"

[[bench]]
name = "benchmark"
harness = false

[[test]]
name = "specsuite"
path = "specsuite/main.rs"
harness = false

[features]
default = ["nom"]
nom = ["dep:nom"]
pest = ["dep:pest", "dep:pest_derive"]

[dependencies]
pest = { version = "2.5.2", optional = true }
pest_derive = { version = "2.5.2", optional = true }
itoa = "1.0.5"
nom = { version = "7", optional = true }
ryu = "1.0.12"
unicode-ident = "1.0.6"
nom_locate = "4.1.0"

[dependencies.indexmap]
features = ["serde"]
version = "1.9.2"

[dependencies.serde]
features = ["derive"]
version = "1.0.151"

[dependencies.vecmap-rs]
features = ["serde"]
version = "0.1.9"

[dev-dependencies]
criterion = "0.4"
assert-json-diff = "2.0.2"
indoc = "1.0"
pretty_assertions = "1.3.0"
textwrap = "0.16.0"

[dev-dependencies.serde_json]
features = ["preserve_order"]
version = "1.0.91"
