[workspace]
members = [
    "crates/benchmarks",
    "crates/hcl-edit",
    "crates/hcl-primitives",
    "crates/hcl-rs",
    "crates/hcl2json",
    "crates/specsuite",
    "crates/testdata"
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.98"
assert_cmd = "2.0.17"
assert-json-diff = "2.0.2"
clap = "4.5.40"
criterion = "0.6"
fnv = "1.0"
globset = "0.4.16"
indexmap = "2.7.0"
indoc = "2.0"
itoa = "1.0.14"
kstring = "2.0.2"
predicates = "3.1.3"
pretty_assertions = "1.4.1"
rayon = "1.10.0"
ryu = "1.0.18"
serde = { version = "1.0.217", default-features = false }
serde_json = "1.0.140"
textwrap = "0.16.1"
unicode-ident = "1.0.14"
vecmap-rs = "0.2"
walkdir = "2.5.0"
winnow = "0.7"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
