[package]
name = "benchmarks"
version = "0.0.3"
publish = false
edition = "2021"

[package.metadata.release]
release = false

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "serde"
harness = false

[dev-dependencies]
criterion = "0.4"
hcl-rs = { path = "../hcl-rs" }
testdata = { path = "../testdata" }
