[package]
name = "hcl-edit"
version = "0.8.7"
authors = ["Martin Ohmann <martinohmann@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Parse and modify HCL while preserving comments and whitespace"
repository = "https://github.com/martinohmann/hcl-rs"
documentation = "https://docs.rs/hcl-edit/"
keywords = ["hcl"]
categories = ["encoding"]
readme = "README.md"
edition = "2021"
include = [
  "CHANGELOG.md",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "benches/**/*",
  "examples/**/*",
  "src/**/*",
  "tests/**/*"
]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[features]
default = []
perf = ["hcl-primitives/perf"]

[dependencies]
fnv.workspace = true
hcl-primitives = { version = "0.1.9", path = "../hcl-primitives" }
vecmap-rs.workspace = true
winnow.workspace = true

[dev-dependencies]
indoc.workspace = true
pretty_assertions.workspace = true
testdata = { path = "../testdata" }

[[example]]
name = "interpolation-unwrapping"
test = true
