[package]
name = "hcl-primitives"
version = "0.1.9"
authors = ["Martin Ohmann <martinohmann@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Primitives used by the HCL sub-languages"
repository = "https://github.com/martinohmann/hcl-rs"
documentation = "https://docs.rs/hcl-primitives/"
keywords = ["hcl", "primitives"]
categories = ["encoding"]
readme = "README.md"
edition = "2021"
include = [
  "CHANGELOG.md",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "benches/**/*",
  "examples/**/*",
  "src/**/*",
  "tests/**/*"
]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[features]
default = ["std"]
std = ["serde?/std"]
perf = ["std", "dep:kstring"]
serde = ["dep:serde", "kstring?/serde"]

[dependencies]
itoa.workspace = true
kstring = { workspace = true, features = ["max_inline"], optional = true }
ryu.workspace = true
serde = { workspace = true, features = ["alloc", "derive"], optional = true }
unicode-ident.workspace = true
