[package]
name = "hcl-rs"
version = "0.18.6"
authors = ["Martin Ohmann <martinohmann@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "HCL parser and formatter for rust with serde support"
repository = "https://github.com/martinohmann/hcl-rs"
documentation = "https://docs.rs/hcl-rs/"
keywords = ["hcl", "serde", "serialization"]
categories = ["encoding"]
readme = "README.md"
edition = "2021"
include = [
  "CHANGELOG.md",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "benches/**/*",
  "examples/**/*",
  "src/**/*",
  "tests/**/*"
]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[lib]
name = "hcl"
path = "src/lib.rs"

[features]
default = []
perf = ["hcl-edit/perf", "hcl-primitives/perf"]

[dependencies]
hcl-edit = { version = "0.8.7", path = "../hcl-edit" }
hcl-primitives = { version = "0.1.9", path = "../hcl-primitives", features = ["serde"] }
indexmap = { workspace = true, features = ["serde"] }
itoa.workspace = true
serde = { workspace = true, features = ["derive"] }
vecmap-rs = { workspace = true, features = ["serde"] }

[dev-dependencies]
indoc.workspace = true
pretty_assertions.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }

[[example]]
name = "in-place-expr-evaluation"
test = true
