[package]
name = "hcl-rs"
version = "0.19.3"
authors = ["Martin Ohmann <martinohmann@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "HCL parser and formatter for rust with serde support"
repository = "https://github.com/martinohmann/hcl-rs"
documentation = "https://docs.rs/hcl-rs/"
keywords = ["hcl", "serde", "serialization"]
categories = ["encoding"]
readme = "README.md"
edition = "2021"
include = [
  "CHANGELOG.md",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "benches/**/*",
  "examples/**/*",
  "src/**/*",
  "tests/**/*"
]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[lib]
name = "hcl"
path = "src/lib.rs"

[features]
default = []
perf = ["hcl-edit/perf", "hcl-primitives/perf"]

[dependencies]
indexmap = { version = "2.7.0", features = ["serde"] }
itoa = "1.0.14"
hcl-edit = { version = "0.9.2", path = "../hcl-edit" }
hcl-primitives = { version = "0.1.10", path = "../hcl-primitives", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
vecmap-rs = { version = "0.2", features = ["serde"] }

[dev-dependencies]
indoc = "2.0"
pretty_assertions = "1.4.1"
serde_json = { version = "1.0.134", features = ["preserve_order"] }

[[example]]
name = "in-place-expr-evaluation"
test = true
