[package]
name = "hcl2json"
version = "0.1.2"
authors = ["Martin Ohmann <martinohmann@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "CLI program for converting HCL to JSON"
repository = "https://github.com/martinohmann/hcl-rs"
documentation = "https://docs.rs/hcl2json/"
keywords = ["hcl", "json", "serialization"]
categories = ["encoding"]
readme = "README.md"
edition = "2024"
include = [
  "CHANGELOG.md",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "benches/**/*",
  "examples/**/*",
  "src/**/*",
  "tests/**/*"
]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
globset.workspace = true
hcl-rs = { version = "0.18.6", path = "../hcl-rs", features = ["perf"] }
rayon.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
walkdir.workspace = true

[dev-dependencies]
assert_cmd = { workspace = true, features = ["color"] }
predicates.workspace = true
