[package]
name = "hcl2json"
version = "0.1.9"
authors = ["Martin Ohmann <martinohmann@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "CLI program for converting HCL to JSON"
repository = "https://github.com/martinohmann/hcl-rs"
documentation = "https://docs.rs/hcl2json/"
keywords = ["hcl", "json", "serialization"]
categories = ["encoding"]
readme = "README.md"
edition = "2024"
include = [
  "CHANGELOG.md",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "benches/**/*",
  "examples/**/*",
  "src/**/*",
  "tests/**/*"
]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
globset = "0.4.16"
hcl-rs = { version = "0.19.3", path = "../hcl-rs", features = ["perf"] }
rayon = "1.10.0"
serde_json = { version = "1.0.140", features = ["preserve_order"] }
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = { version = "2.0.17", features = ["color"] }
predicates = "3.1.3"
