[package]
name = "specsuite"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata.release]
release = false

[[test]]
name = "specsuite"
path = "main.rs"
harness = false

[dev-dependencies]
assert-json-diff.workspace = true
hcl-rs = { path = "../hcl-rs" }
serde = { workspace = true, features = ["derive"] }
textwrap.workspace = true
